@@ -1100,7 +1100,7 @@ if test "x$server" = "xyes" || test "x$proxy" = "xyes"; then
 
 	dnl Checking for Oracle support
 	AX_LIB_ORACLE_OCI([10.0])
-	if test "x$WANT_ORACLE_OCI" = "xyes"; then
+	if test "x$want_oracle_oci" = "xyes"; then
 		if test "x$have_db" != "xno"; then
 			AC_MSG_ERROR([You can configure for only one database.])
 		fi
@@ -1147,7 +1147,7 @@ if test "x$server" = "xyes" || test "x$proxy" = "xyes"; then
 
 	dnl Checking for SQLite3 support
 	AX_LIB_SQLITE3()
-	if test "x$WANT_SQLITE3" = "xyes"; then
+	if test "x$want_sqlite3" = "xyes"; then
 		if test "x$have_db" != "xno"; then
 			AC_MSG_ERROR([You can configure for only one database.])
 		fi
@@ -1156,7 +1156,10 @@ if test "x$server" = "xyes" || test "x$proxy" = "xyes"; then
 			have_db="SQLite v3.x"
 
 			saved_CPPFLAGS="$CPPFLAGS"
-			CPPFLAGS="$CPPFLAGS $SQLITE3_CPPFLAGS $SQLITE3_LDFLAGS"
+			saved_LDFLAGS="$LDFLAGS"
+
+			CPPFLAGS="$CPPFLAGS $SQLITE3_CPPFLAGS"
+			LDFLAGS="$LDFLAGS $SQLITE3_LDFLAGS $SQLITE3_LIBS"
 
 			AC_MSG_CHECKING([for function sqlite3_open_v2() in sqlite3.h])
 			AC_TRY_LINK([#include <sqlite3.h>],
@@ -1168,6 +1171,7 @@ if test "x$server" = "xyes" || test "x$proxy" = "xyes"; then
 				AC_MSG_RESULT(no))
 
 			CPPFLAGS="$saved_CPPFLAGS"
+			LDFLAGS="$saved_LDFLAGS"
 		else
 			AC_MSG_ERROR([SQLite3 library not found])
 		fi
@@ -1236,8 +1240,8 @@ if test "x$server" = "xyes" || test "x$proxy" = "xyes"; then
 	dnl Checking for unixODBC support
 	LIBUNIXODBC_CHECK_CONFIG([no])
 	if test "x$want_unixodbc" = "xyes"; then
-		if test "x$found_unixodbc" != "xyes"; then
-			AC_MSG_ERROR($found_unixodbc)
+		if test "x$unixodbc_error" != "x"; then
+			AC_MSG_ERROR($unixodbc_error)
 		fi
 		have_unixodbc="yes"
 	fi
